# music-player

./: CMakeLists.txt
include/: downloader.h  library.h  player.h  ui.h
src/: downloader.cpp  downloader.py  library.cpp  main.cpp  player.cpp  ui.cpp
